src/main/java/parser/ExpressionParser.java
/* ExpressionParser.java */
/* Generated By:JavaCC: Do not edit this line. ExpressionParser.java */
    package parser;
import java.io.PrintStream ;
import java.util.ArrayList;
import util.DFS;
class ExpressionParser implements ExpressionParserConstants {
    public static void main( String[] args )
        throws NumberFormatException, ParseException {
        String name = "1+2+3-5*4+4/2";
        ExpressionParser parser = new ExpressionParser( System.in ) ;
        Node node = parser.expression();
        DFS dfs = new DFS();
        dfs.dumpAST(node);
        System.out.println(dfs.getNodes().toString());
        System.out.println(dfs.getEdges().toString());
    }

  final public Node expression() throws ParseException {Token t = null;
  // 在写表达式的时候一定要注意 ｜ 的时候注意使用 () 包裹起来 否则会出现问题
  Node node = null;
  Node ret = null;
    node = term();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case ASSIGN:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MINUS:{
        t = jj_consume_token(MINUS);
ret = new Node();
              ret.setLeftChild(node);
              ret.setNodeType(Node.Type.MINUS);
              node.setParent(ret);
              ret.setValue(t.image);
        node = term();
ret.setRightChild(node);
              node.setParent(ret);
              node = ret;
        break;
        }
      case PLUS:{
        t = jj_consume_token(PLUS);
ret = new Node();
              ret.setLeftChild(node);
              node.setParent(ret);
              ret.setNodeType(Node.Type.PLUS);
              ret.setValue(t.image);
        node = term();
ret.setRightChild(node);
              node = ret;
        break;
        }
      case ASSIGN:{
        t = jj_consume_token(ASSIGN);
ret = new Node();
                ret.setLeftChild(node);
                node.setParent(ret);
                ret.setNodeType(Node.Type.ASSIGN);
                ret.setValue(t.image);
        node = expression();
ret.setRightChild(node);
              node.setParent(ret);
              node = ret;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
//      System.out.println("In expression : ret = " + node);
      {if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}

  final public Node term() throws ParseException {Token t;
  Node ret = null;
  Node node = null;
    node = primary();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIMES:{
        t = jj_consume_token(TIMES);
ret = new Node();
              ret.setLeftChild(node);
              node.setParent(ret);
              ret.setNodeType(Node.Type.TIMES);
              ret.setValue(t.image);
        node = primary();
ret.setRightChild(node);
              node.setParent(ret);
              node = ret;
        break;
        }
      case DIV:{
        t = jj_consume_token(DIV);
ret = new Node();
              ret.setLeftChild(node);
              node.setParent(ret);
              ret.setNodeType(Node.Type.DIV);
              ret.setValue(t.image);
        node = primary();
ret.setRightChild(node);
              node.setParent(ret);
              node = ret;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
//    System.out.println("In term : ret = " + node);
    {if ("" != null) return node;}
    throw new Error("Missing return statement in function");
}

  final public Node primary() throws ParseException {Token t = null;
  Node ret = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
ret = new Node();
      t = jj_consume_token(NUMBER);
ret.setNodeType(Node.Type.NUMBER);
            ret.setValue(t.image);
      break;
      }
    case IDENTIFIER:{
ret = new Node();
      t = jj_consume_token(IDENTIFIER);
ret.setNodeType(Node.Type.IDENTIFIER);
            ret.setValue(t.image);
      break;
      }{
ret = new Node();
      t = jj_consume_token(IDENTIFIER);
      jj_consume_token(LPARN);
ret.setNodeType(Node.Type.IDENTIFIER);
            ret.setValue(t.image);
      jj_consume_token(RPARN);
      break;
      }
    case LPARN:{
      jj_consume_token(LPARN);
      ret = expression();
      jj_consume_token(RPARN);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
//    System.out.println("In primary : ret = " + ret);
    {if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
}

  /** Generated Token Manager. */
  public ExpressionParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x20900,0x20900,0x600,0x600,0x448000,};
	}

  /** Constructor with InputStream. */
  public ExpressionParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExpressionParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ExpressionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ExpressionParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ExpressionParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ExpressionParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ExpressionParser(ExpressionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ExpressionParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[23];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 5; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 23; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
